; ModuleID = '/home/carl/AnghaBench/mpv/stream/extr_stream.c_stream_create.c'
source_filename = "/home/carl/AnghaBench/mpv/stream/extr_stream.c_stream_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stream = type { i32 }
%struct.mp_cancel = type { i32 }
%struct.mpv_global = type { i32 }
%struct.stream_open_args = type { i32, i8*, %struct.mp_cancel*, %struct.mpv_global* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.stream* @stream_create(i8* %0, i32 %1, %struct.mp_cancel* %2, %struct.mpv_global* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.mp_cancel*, align 8
  %8 = alloca %struct.mpv_global*, align 8
  %9 = alloca %struct.stream_open_args, align 8
  %10 = alloca %struct.stream*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.mp_cancel* %2, %struct.mp_cancel** %7, align 8
  store %struct.mpv_global* %3, %struct.mpv_global** %8, align 8
  %11 = getelementptr inbounds %struct.stream_open_args, %struct.stream_open_args* %9, i32 0, i32 0
  %12 = load i32, i32* %6, align 4
  store i32 %12, i32* %11, align 8
  %13 = getelementptr inbounds %struct.stream_open_args, %struct.stream_open_args* %9, i32 0, i32 1
  %14 = load i8*, i8** %5, align 8
  store i8* %14, i8** %13, align 8
  %15 = getelementptr inbounds %struct.stream_open_args, %struct.stream_open_args* %9, i32 0, i32 2
  %16 = load %struct.mp_cancel*, %struct.mp_cancel** %7, align 8
  store %struct.mp_cancel* %16, %struct.mp_cancel** %15, align 8
  %17 = getelementptr inbounds %struct.stream_open_args, %struct.stream_open_args* %9, i32 0, i32 3
  %18 = load %struct.mpv_global*, %struct.mpv_global** %8, align 8
  store %struct.mpv_global* %18, %struct.mpv_global** %17, align 8
  %19 = call i32 @stream_create_with_args(%struct.stream_open_args* %9, %struct.stream** %10)
  %20 = load %struct.stream*, %struct.stream** %10, align 8
  ret %struct.stream* %20
}

declare dso_local i32 @stream_create_with_args(%struct.stream_open_args*, %struct.stream**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
